created a test setup for the status message

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="green_bg_dark">#FF070a00</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="error">#FFFF0000</color>
+    <color name="success">@color/green_500</color>
 </resources>
