--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="20dp"
-    android:gravity="center">
+    android:padding="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -88,36 +87,36 @@
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
             android:hint="@string/commands_hint"
-            android:lines="3"
+            android:lines="2"
             android:maxLines="10"
             android:gravity="top|start"
             android:textSize="20sp"
             android:layout_marginBottom="20dp"
             android:autofillHints="command" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_alignParentBottom="true">
-
-        <TextView
-            android:id="@+id/tvStatus"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="30sp"
-            android:textAlignment="center"
-            android:layout_marginBottom="40dp"/>
-
         <Button
             android:id="@+id/btnSend"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/send_btn" />
+            android:text="@string/send_btn"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/output_label"
+            android:textSize="20sp"/>
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tvStatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:background="@color/green_bg_dark"
+            android:textIsSelectable="true"
+            android:minLines="6"/>
 
     </LinearLayout>
 
-
-</RelativeLayout>
+</ScrollView>
